# FSI_HOL

./: DEPLOYMENT_README.md  INSTALL.md  PREVIEW.md  README.md  deploy.sh  full-ci.yml  listing.yml  quickstart.md  quickstart_deploy.sh  slug_template.md
dataops/event/: .cursorrules  ADDITIONAL_INVESTOR_MATERIALS_IDEAS.md  AI_EXTRACT_ANALYST_REPORTS.sql  ANNUAL_REPORTS_SUMMARY.md  CHARTS_INDEX.md  COMPANY_PORTFOLIO_SUMMARY.md  EMAIL_DATA_README.md  EXECUTIVE_PHOTO_PROMPTS.md  NRNT_Interview_Audio_Script.md  USER_PROFILE_INSTRUCTIONS.md  VIDEO_PROMPTS.md  add_allow_list.sql  attendee_account_outputs.template.env  configure_aisql_examples.template.sql  configure_attendee_account.template.sql  configure_hackathon_database.template.sql  data_foundation.template.sql  generate_emails_csv.py  (+14 more)
dataops/event/homepage/: .gitignore  mkdocs.yml  pyproject.toml  requirements.txt
dataops/event/homepage/docs/: More_Activities.md  about_dataops.md  agents.md  aisql_examples.md  analyst.md  build_quantitive_model.md  cortex_ai_documents.md  cta.md  faqs.md  index.md  logging_in.md  market_place.md  search_service.md  snowflake_intelligence.md  sound_transcripts.md  step1.md  step3.md
dataops/event/homepage/docs/assets/docai/: step1.md
dataops/event/homepage/docs/stylesheets/: extra.css
dataops/event/homepage/html/: build_badge.html  continue_block.html  customer_logo.html  dde_button.html  footer.html  header.html  main.html  snowsight_button.html
dataops/event/homepage/include/: main.py
quickstart/: MANIFEST.md  README.md  quickstart.md
vault-content/: vault.template.yml
(+356 files in other folders)
